--- a/Verslag/Practicum verslag.tex
+++ b/Verslag/Practicum verslag.tex
@@ -38,11 +38,11 @@ Het matrixproduct  $A=L_{E}\cdot U$ :
 %\begin{samepage} %elementen op zelfde pagina houden
 Als we de elementen van dit matrixproduct elementgewijs uitschrijven krijgen we:
 \begin{tabbing} %voor layout
-\\$a_{1,1} = 1 \cdot u_{1,1}$\hspace{6.0cm} \= $\rightarrow  u_{1,1}$
-\\$a_{1,2} = 1 \cdot u_{1,2}$ \> $\rightarrow  u_{1,2}$
-\\$a_{1,3} = 1 \cdot u_{1,3}$ \> $\rightarrow  u_{1,3}$
+\\$a_{1,1} = 1 \cdot u_{1,1}$\hspace{6.0cm} \= $\rightarrow  u_{1,1} = a_{1,1}$
+\\$a_{1,2} = 1 \cdot u_{1,2}$ \> $\rightarrow  u_{1,2}= a_{1,2}$
+\\$a_{1,3} = 1 \cdot u_{1,3}$ \> $\rightarrow  u_{1,3}= a_{1,3}$
 \\ {...}
-\\$a_{1,n} = 1 \cdot u_{1,n}$ \> $\rightarrow  u_{1,n}$
+\\$a_{1,n} = 1 \cdot u_{1,n}$ \> $\rightarrow  u_{1,n}= a_{1,n}$
 \\ {}
 \\$a_{2,1} = l_{2,1} \cdot u_{1,1}$ \> $\rightarrow l_{2,1}$
 \\$a_{2,2} = l_{2,1} \cdot u_{1,2} + 1 \cdot u_{2,2}$ \> $\rightarrow u_{2,2}$
