--- a/Verslag/Practicum verslag.tex
+++ b/Verslag/Practicum verslag.tex
@@ -2,35 +2,46 @@
 \usepackage[dutch]{babel}
 \usepackage{mathtools}
 \usepackage{graphicx}
+\usepackage{setspace}
 \graphicspath{ {Afbeeldingen/}}
 \title{Practicum Numerieke Wiskunde}
 \author{Barbara Ameloot, Tobias Baert}
 \date{Mei 2018}
 \begin{document}
 \maketitle
+%
+%
+%
+%     OPDRACHT 1.1
+%
+%
+%
    \section*{Opdracht 1.1}
 Het matrixproduct  $A=L_{E}\cdot U$ :
 \\
 \[
  \begin{bmatrix}
-  a_{1,1} & a_{1,2} & \cdots & a_{1,n} \\
-  a_{2,1} & a_{2,2} & \cdots & a_{2,n} \\
+  a_{1,1} & a_{1,2}&a_{1,3} & \cdots & a_{1,n} \\
+  a_{2,1} & a_{2,2}&a_{2,3} & \cdots & a_{2,n} \\
+  a_{3,1} & a_{3,2}&a_{3,3} & \cdots & a_{3,n} \\
   \vdots  & \vdots  & \ddots & \vdots  \\
-  a_{n,1} & a_{n,2} & \cdots & a_{n,n} 
+  a_{n,1} & a_{n,2} & a_{n,3} & \cdots & a_{n,n} 
  \end{bmatrix}
 =
 \begin{bmatrix}
- 1 & 0 & \cdots & 0 \\
-  l_{2,1} &1 & \cdots &0 \\
-  \vdots  & \vdots  & \ddots & \vdots  \\
-  l_{n,1} &l_{n,2} & \cdots & 1 
+ 1 & 0 & 0& \cdots & 0 \\
+  l_{2,1} &1 &0& \cdots &0 \\
+  l_{3,1} &l_{3,2} &0& \cdots &0 \\
+    \vdots  &\vdots  & \vdots  & \ddots & \vdots  \\
+  l_{n,1} &l_{n,2}&l_{n,3} & \cdots & 1 
 \end{bmatrix}
 \cdot
 \begin{bmatrix}
-  u_{1,1} & u_{1,2} & \cdots & u_{1,n} \\
-  0 & u_{2,2} & \cdots & u_{2,n} \\
-  \vdots  & \vdots  & \ddots & \vdots  \\
- 0 & 0 & \cdots & u_{n,n}
+  u_{1,1} & u_{1,2}&u_{1,3}& \cdots & u_{1,n} \\
+  0 & u_{2,2}&u_{2,3} & \cdots & u_{2,n} \\
+  0 & 0&u_{3,3} & \cdots & u_{3,n} \\
+   \vdots  & \vdots  & \vdots  & \ddots & \vdots  \\
+ 0 & 0 &0& \cdots & u_{n,n}
 \end{bmatrix}
 \]
 \\
@@ -38,11 +49,11 @@ Het matrixproduct  $A=L_{E}\cdot U$ :
 %\begin{samepage} %elementen op zelfde pagina houden
 Als we de elementen van dit matrixproduct elementgewijs uitschrijven krijgen we:
 \begin{tabbing} %voor layout
-\\$a_{1,1} = 1 \cdot u_{1,1}$\hspace{6.0cm} \= $\rightarrow  u_{1,1} = a_{1,1}$
-\\$a_{1,2} = 1 \cdot u_{1,2}$ \> $\rightarrow  u_{1,2}= a_{1,2}$
-\\$a_{1,3} = 1 \cdot u_{1,3}$ \> $\rightarrow  u_{1,3}= a_{1,3}$
+\\$a_{1,1} = 1 \cdot u_{1,1}$\hspace{6.0cm} \= $\rightarrow  u_{1,1}$
+\\$a_{1,2} = 1 \cdot u_{1,2}$ \> $\rightarrow  u_{1,2}$
+\\$a_{1,3} = 1 \cdot u_{1,3}$ \> $\rightarrow  u_{1,3}$
 \\ {...}
-\\$a_{1,n} = 1 \cdot u_{1,n}$ \> $\rightarrow  u_{1,n}= a_{1,n}$
+\\$a_{1,n} = 1 \cdot u_{1,n}$ \> $\rightarrow  u_{1,n}$
 \\ {}
 \\$a_{2,1} = l_{2,1} \cdot u_{1,1}$ \> $\rightarrow l_{2,1}$
 \\$a_{2,2} = l_{2,1} \cdot u_{1,2} + 1 \cdot u_{2,2}$ \> $\rightarrow u_{2,2}$
@@ -65,25 +76,79 @@ Als we de elementen van dit matrixproduct elementgewijs uitschrijven krijgen we:
 \\{}
 \end{tabbing}
 \end{minipage}
-\pagebreak
 %Elementen berekenen
-\begin{verse}
-\begin{tabbing}
 We kunnen de elementen $u_{i,j}$ en $ l_{i,j}$ van $U$ en $L_{E}$ als volgt berekenen:
-\\Voor $i = j \Rightarrow$  \= 
-\\ \>$u_{i,j} =  a_{i,j}$
-\\ \>$l_{i,j} =  1$
+\\Voor elke $k = 1,2,...,n:$
 \\{}
-\\Voor $i < j \Rightarrow$
-\\ \>$u_{i,j} =  a_{i,j}$
-\\ \>$l_{i,j} =  0$
+\\ \textbullet { } $u_{k,m} = a_{k,m} - \sum_{j=1}^{k-1}l_{k,j} \cdot u_{j,m} $ met $m = k,k+1,...,n$ geeft de $k^{de}$ kolom van $U$
 \\{}
-\\Voor $i > j  \Rightarrow$ 
-\\ \>$u_{i,j} =  0$
-\\ \>$l_{i,j} =  a_{i,j}$
-\end{tabbing}
-\end{verse}
+\\ \textbullet { } $l_{i,k} = \frac{a_{i,k}-  \sum_{j=1}^{k-1}l_{i,j} \cdot u_{j,k}}{u_{k,k}}$ met $i = k+1,k+2,...,n$ en $l_{i,i} = 1$ geeft de $k^{de}$ kolom van $L$
+%
+%
+%
+%     OPDRACHT 1.2
+%
+%
+%
 \section*{Opdracht 1.2}
+Tridiagonale matrix A:
+\[ \begin{bmatrix}
+  a_{1,1} & a_{1,2}& 0 & \cdots &0 \\
+  a_{2,1} & a_{2,2}&a_{2,3} & \cdots &0 \\
+ 0 & a_{3,2}&a_{3,3} & \cdots &0 \\
+  \vdots  & \vdots  & \ddots & \vdots  \\
+ 0 & 0 &0 & \cdots & a_{n,n} 
+ \end{bmatrix}\]
+\\{}
+\\Voor $u_{i,j}$:
+\\ Uit 1.1 weten we dat  $u_{i,j} = a_{i,j} - \sum_{k=1}^{i-1}l_{i,k} \cdot u_{k,j}$.
+\\{}
+\\Omdat $U$ een bovendriehoeksmatrix is geldt voor $i>j$: $u_{i,j} = 0$
+\[
+\begin{bmatrix}
+ 1 & 0 & 0& \cdots & 0 \\
+  l_{2,1} &1 &0& \cdots &0 \\
+0 &l_{3,2} &0& \cdots &0 \\
+    \vdots  &\vdots  & \vdots  & \ddots & \vdots  \\
+0 &0&0 & \cdots & 1 
+\end{bmatrix}
+\]
+\\Voor $l_{i,j}$:
+\\Uit 1.1 weten we dat $l_{i,k} = \frac{a_{i,k}-  \sum_{j=1}^{k-1}l_{i,j} \cdot u_{j,k}}{u_{k,k}}$
+\\{}
+\\Omdat U een bovendriehoeksmatrix is geldt dat als $i>j$, $u_{i,j} = 0$.
+\\Voor $i<j$ geldt: 
+\\
+\\{}
+\\Het matrixproduct  $A=L_{E}\cdot U$ bij een tridiagonale matrix:
+\[
+ \begin{bmatrix}
+  a_{1,1} & a_{1,2}& 0 & \cdots &0 \\
+  a_{2,1} & a_{2,2}&a_{2,3} & \cdots &0 \\
+ 0 & a_{3,2}&a_{3,3} & \cdots &0 \\
+  \vdots  & \vdots  & \ddots & \vdots  \\
+ 0 & 0 &0 & \cdots & a_{n,n} 
+ \end{bmatrix}
+=
+\begin{bmatrix}
+ 1 & 0 & 0& \cdots & 0 \\
+  l_{2,1} &1 &0& \cdots &0 \\
+0 &l_{3,2} &0& \cdots &0 \\
+    \vdots  &\vdots  & \vdots  & \ddots & \vdots  \\
+0 &0&0 & \cdots & 1 
+\end{bmatrix}
+\cdot
+\begin{bmatrix}
+  u_{1,1} & u_{1,2}&0& \cdots &0 \\
+  0 & u_{2,2}&u_{2,3} & \cdots &0 \\
+  0 & 0&u_{3,3} & \cdots &0 \\
+   \vdots  & \vdots  & \vdots  & \ddots & \vdots  \\
+ 0 & 0 &0& \cdots & u_{n,n}
+\end{bmatrix}
+\]
+
+
+
 Voor de matrix $U$:
 \\Uit 1.1 weten we dat als $u_{i,j}$ onder de hoofddiagonaal valt, $u_{i,j} = 0$.
 \\In het andere geval (element ligt op de hoofddiagonaal of erboven) is $u_{i,j} = a_{i,j}$.
@@ -98,22 +163,64 @@ Voor de matrix $U$:
 \\Omdat $A$ een tridiagonale matrix is zijn alle elementen van $A$ onder de subdiagonaal $0$.
 \\Alle elementen van $L$ onder de subdiagonaal zijn dus ook 0.
 \\$L$ is dus een tridiagonale matrix.
+%
+%
+%
+%     OPDRACHT 1.3.1
+%
+%
+%
 \section*{Opdracht 1.3.1}
 Aantal elementaire bewerkingen:
 \\$(n-1) \cdot 6V + (n-1) \cdot 3O$
 \\Met $V$: vermenigvuldiging/deling en $O$: optelling/aftrekking
+%
+%
+%
+%     OPDRACHT 1.3.2
+%
+%
+%
 \section*{Opdracht 1.3.2}
 Er wordt reeds in het begin van het algoritme een nul-element gevormd op de hoofddiagonaal van U. In een volgende stap wordt door dit element gedeeld.
+
+%
+%
+%
+%     OPDRACHT 1.3.3
+%
+%
 \section*{Opdracht 1.3.3}
 TODO
+%
+%
+%
+%     OPDRACHT 2.4
+%
+%
+%
 \section*{Opdracht 2.4}
 Plot:
 \\{}
 \includegraphics[scale = 0.8]{plot2_4}
+%
+%
+%
+%     OPDRACHT 2.5
+%
+%
+%
 \section*{Opdracht 2.5}
 Plot:
 \\{}
 \includegraphics[scale = 0.8]{plot2_5}
+%
+%
+%
+%     OPDRACHT 2.6
+%
+%
+%
 \section*{Opdracht 2.6}
 We kunnen meteen inzien dat methode uit opdracht 2.4 een betere benadering oplevert dan de  methode uit opdracht 2.5 zolang het aantal knooppunten groot genoeg is. Het belangrijkste verschil tussen de twee methodes is het gebrek aan convergentie bij de methode uit opdracht 2.5. Dat is een gevolg van het verschijnsel van Runge. Interpolaties met equidistante knooppunten van bepaalde functies, waaronder de Runge-functie, convergeren niet. De benadering begint sterk te oscilleren aan de randen van het interpolatieinterval, met een grote maximale interpolatie fout als gevolg.
 \end{document}
