--- a/Verslag/Bewijs.tex
+++ b/Verslag/Bewijs.tex
@@ -17,7 +17,7 @@ Bewijzen 1.1:
 \\{}
 \\Daaruit leiden we af dat:
 \\ \textbullet{ } $l_{i,1}$, het eerste element van elke rij van L, gelijk is aan nul als en slechts als $a_{i,j}$ gelijk is aan nul.
-\\ \textbullet { } $ l_{i,j}$ gelijk is aan 0 asa $a_{i,j} = 0$ EN alle elementen $l_{i,k}$ met $k = 1, ..., i - 1$ (dit zijn de elementen links in dezelfde rij) gelijk zijn aan 0.
+\\ \textbullet { } $ l_{i,j}$ gelijk is aan 0 als en slechts als $a_{i,j}$ gelijk is aan nul EN alle elementen $l_{i,k}$ met $k = 1, ..., i - 1$ (dit zijn de elementen links in dezelfde rij) gelijk zijn aan 0.
 \\{}
 \\Als gevolg daarvan wordt elke rij van links naar rechts met nullen gevuld tot men aankomt op de subdiagonaal. Omdat L verder een benedendriehoeksmatrix is, is L dus tridiagonaal.
 \\{}
@@ -27,7 +27,7 @@ Bewijzen 1.1:
 \\{}
 \\Daaruit leiden we af dat:
 \\ \textbullet{ } $u_{1,j}$, het eerste element van elke kolom van$ U$, gelijk is aan nul als en slechts als $a_{i,j}$ gelijk is aan 0.
-\\ \textbullet{ } $u_{i,j}$ gelijk is aan nul asa $a_{i,j} = 0$ EN alle elementen $u_{k,j}$ met $k = 1, ..., i - 1$ (dit zijn de elementen erboven in dezelfde kolom) gelijk zijn aan 0.
+\\ \textbullet{ } $u_{i,j}$ gelijk is aan nul als en slechts als $a_{i,j}$ gelijk is aan nul EN alle elementen $u_{k,j}$ met $k = 1, ..., i - 1$ (dit zijn de elementen erboven in dezelfde kolom) gelijk zijn aan 0.
 \\{}
 \\Als gevolg daarvan wordt elke kolom van boven naar onderen met nullen gevuld tot men aankomt op de superdiagonaal. Omdat $U$ verder een bovendriehoeksmatrix is, is $U$ dus tridiagonaal.
 \end{document}
