--- a/Verslag/Bewijs.tex
+++ b/Verslag/Bewijs.tex
@@ -15,7 +15,7 @@ Bewijzen 1.1:
 \\{}
 \\$a_{ij} = \sum_k^{i-1} {l_{ik}\cdot u_{kj}}$ met $ i < j$ 
 \\{}
-\\Daaruit leiden we af dat:
+\\We zien dat $l_{i,j}$ gelijk is aan nul als alle andere termen nul zijn. Daaruit leiden we af dat:
 \\ \textbullet{ } $l_{i,1}$, het eerste element van elke rij van L, gelijk is aan nul als en slechts als $a_{i,j}$ gelijk is aan nul.
 \\ \textbullet { } $ l_{i,j}$ gelijk is aan 0 als en slechts als $a_{i,j}$ gelijk is aan nul EN alle elementen $l_{i,k}$ met $k = 1, ..., i - 1$ (dit zijn de elementen links in dezelfde rij) gelijk zijn aan 0.
 \\{}
@@ -25,7 +25,7 @@ Bewijzen 1.1:
 \\{}
 \\$a_{ij} = \sum_k^{i-1} {l_{ik}\cdot u_{kj}} + u_{ij}$ met $ i >= j $
 \\{}
-\\Daaruit leiden we af dat:
+\\We zien dat $u_{i,j}$ gelijk is aan nul als alle andere termen nul zijn. Daaruit leiden we af dat:
 \\ \textbullet{ } $u_{1,j}$, het eerste element van elke kolom van$ U$, gelijk is aan nul als en slechts als $a_{i,j}$ gelijk is aan 0.
 \\ \textbullet{ } $u_{i,j}$ gelijk is aan nul als en slechts als $a_{i,j}$ gelijk is aan nul EN alle elementen $u_{k,j}$ met $k = 1, ..., i - 1$ (dit zijn de elementen erboven in dezelfde kolom) gelijk zijn aan 0.
 \\{}
