--- a/Verslag/Practicum verslag.tex
+++ b/Verslag/Practicum verslag.tex
@@ -191,7 +191,7 @@ Er wordt reeds in het begin van het algoritme een nul-element gevormd op de hoof
 %
 %
 \section*{Opdracht 1.3.3}
-TODO
+Het probleem kan opgelost worden door over te stappen naar een Gauss eliminatie met partiële of optimale pivotering. Op die manier kunnen we een betere stabiliteit bekomen door de absolute waarde van de spilelementen te maximaliseren. Het nadeel aan die overstap is dat het aantal operaties stijgt naar O(n^3). 
 %
 %
 %
