Klein foutje in verslag

--- a/Verslag/Practicum verslag.tex
+++ b/Verslag/Practicum verslag.tex
@@ -114,7 +114,8 @@ Tridiagonale matrix A:
 \\{}
 \\Nu is $a_{2,k} = 0$ voor $k > 3$. Omdat we weten dat $u_{1,k} = 0$ voor $k > 2$ is dus ook $u_{1,k} = 0$ voor $k > 3$.
 \\{}
-\\Algemener kunnen dus we zeggen dat $u_{i,k} = 0$ als $k > i + 1$. Omdat we ook weten dat U een bovendriehoeksmatrix is, is de matrix U dus tridiagonaal.
+\\Algemener kunnen dus we zeggen dat $u_{i,k} = 0$ als $k > i + 1$. 
+\\Omdat we ook weten dat U een bovendriehoeksmatrix is, is de matrix U dus tridiagonaal.
 \\{}
 \\ \textbullet { }Voor $L$:
 \\We nemen nu de eerste vergelijking van elke serie uit 1.1:
@@ -129,7 +130,8 @@ Tridiagonale matrix A:
 \\{}
 \\Wederom is $a_{k,2} = 0$ met $k > 3$. Omdat $l_{k,1} = 0$ voor $k > 2$ en $u_{2,2} \neq 0$ moet $l_{k,2} = 0$ voor $k > 3$.
 \\{}
-\\Algemener kunnen dus we zeggen dat $l_{k,j} = 0$ als $k > j + 1$. Omdat we ook weten dat L een benedendriehoeksmatrix is, is de matrix L dus tridiagonaal.
+\\Algemener kunnen dus we zeggen dat $l_{k,j} = 0$ als $k > j + 1$. 
+\\Omdat we ook weten dat L een benedendriehoeksmatrix is, is de matrix L dus tridiagonaal.
 \\{}
 \end{tabbing}
  \textbullet { }Het matrixproduct  $A=L_{E}\cdot U$ bij een tridiagonale matrix:
